# backend/swagger.json
@@ -599,24 +599,6 @@
             "name": "authorization",
             "in": "header",
             "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "Descripcion": { "type": "string" },
-                "ID_Usuario": { "type": "string" },
-                "Precio": { "type": "number" },
-                "Precio_Repuestos": { "type": "number" },
-                "Precio_Mano_Obra": { "type": "number" },
-                "Movil_Nombre": { "type": "string" },
-                "Movil_Especificacion": { "type": "string" },
-                "Fecha": { "type": "string" },
-                "Etapa": { "type": "number" }
-              }
-            }
           }
         ],
         "responses": {
@@ -640,25 +622,6 @@
             "name": "authorization",
             "in": "header",
             "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "ID_Servicio": { "type": "integer" },
-                "Descripcion": { "type": "string" },
-                "ID_Usuario": { "type": "string" },
-                "Precio": { "type": "number" },
-                "Precio_Repuestos": { "type": "number" },
-                "Precio_Mano_Obra": { "type": "number" },
-                "Movil_Nombre": { "type": "string" },
-                "Movil_Especificacion": { "type": "string" },
-                "Fecha": { "type": "string" },
-                "Etapa": { "type": "number" }
-              }
-            }
           }
         ],
         "responses": {
@@ -1697,6 +1660,35 @@
     },
     "/mensajes/eliminar/{id}": {
       "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        }
+      }
+    },
+    "/mensajes/leidos/{id}": {
+      "put": {
         "description": "",
         "parameters": [
           {
